# AgentForge

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  run_analysis.py  run_recs.py  test_run.py
.claude/: settings.json
agentforge/: __init__.py  cli.py  config.py  llm.py
agentforge/collector/: __init__.py  data.py
agentforge/github/: __init__.py  analyzer.py  searcher.py
agentforge/mvp/: __init__.py  builder.py
agentforge/ontology/: __init__.py  builder.py  survey.py
agentforge/recommender/: __init__.py  engine.py
agentforge/scanner/: __init__.py  tools.py
examples/: sample_run.md
tests/: __init__.py  conftest.py  test_collector.py  test_config.py  test_github.py  test_mvp_builder.py  test_ontology_builder.py  test_recommender.py  test_scanner.py  test_survey.py
